--- a/github.html
+++ b/github.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Eksamensprojekt</title>
+    <title>GitHub test</title>
     <link rel ="stylesheet" href="Onepage.css">
     </head>
 
